# fast-api-accelerate

./: .gitignore  README.md  main.py  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml
fast_api_accelerate/: main.py
fast_api_accelerate/builders/: project_builder.py  test_builder.py
fast_api_accelerate/builders/base/: base_builder.py
fast_api_accelerate/commands/: create_project.py  test_config_project.py
fast_api_accelerate/templates/database/: database_py.py
fast_api_accelerate/templates/modules/: __init__.py  auth_controller.py  auth_service.py  client_type.py  user_model.py  user_schemas.py
fast_api_accelerate/templates/projects/: __init__.py  all_models.py  base_repository.py  base_service.py  config_database.py  configs.py  container_ioc.py  main.py  pyproject.py  readme.py  setup_db.py  startup.py
fast_api_accelerate/templates/schemas/: __init__.py  initdtos.py  schemas.py
fast_api_accelerate/templates/tests/: __init__.py  test_auth_controller.py  test_auth_service.py
fast_api_accelerate/utils/: file_system.py  logger.py  template_engine.py
src/builders/: auth_builder.py  database_builder.py  project_builder.py  resource_builder.py
src/builders/base/: __init__.py  base_builder.py
src/commands/: auth_command.py  create_command.py  database_command.py  resource_command.py
src/templates/: __init__.py
src/templates/database/: database_py.py  settings.py
src/templates/projects/: main.py
src/templates/user_base/: model.py  schemas.py
src/utils/: file_system.py  logger.py  template_engine.py
tests/: test_main.py
