[project]
name = "fast_api_accelerate"
version = "0.1.0"
description = "CLI to scaffold structured FastAPI backend projects"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.0",
]

[project.scripts]
fast-api-accelerate = "fast_api_accelerate.main:run"

[dependency-groups]
dev = [
    "black>=26.1.0",
    "coverage>=7.13.4",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
addopts = "-v"
